Fix outreach image to full width on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4143,4 +4143,8 @@ input, select, textarea {
 		.nav-table-item:last-child {
 			border-bottom: none;
 		}
+
+		#mentoring-content .spotlight .image {
+			width: 100%;
+		}
 	}
